# pydashbot

./: .gitignore  README.md  pyproject.toml
apps/: __init__.py
apps/dashboard/: README.md  __init__.py  server.py
apps/map/: README.md  __init__.py  animation.py  calibrate.py  dashboard.py  exploration_walls.py  main.py  visualize_cells.py
apps/map/config/: config.yaml
apps/map/policies/: __init__.py  conservative_exploration.py  coverage_exploration.py  exploration_policies.py  exploration_policy.py  exploration_policy_base.py  novelty_exploration.py  wall_follower.py
apps/map/policies/exploration/: __init__.py  conservative_exploration.py  coverage_exploration.py  exploration_policy_base.py  novelty_exploration.py  preset_exploration.py  wall_follower.py
apps/map/policies/navigation/: __init__.py  d_star_lite.py  hard_blocked_edge.py  navigation_policy_base.py
apps/map/strategies/: __init__.py  go_home_strategies.py
dash/: README.md  __init__.py  actuators.py  interactive.py  motion.py  robot.py  sensors.py  ws_client.py  ws_server.py
dash/control/: __init__.py  interactive.py
dash/core/: __init__.py  actuators.py  command_protocol.py  constants.py  motion.py  robot.py  sensors.py
dash/remote/: __init__.py  client.py  server.py
data/calibration/: sample_calibration.json
data/config/: sample_config.yaml
examples/mapping/: README.md  animation.py  calibrate.py  conservative_exploration.py  coverage_exploration.py  exploration_policy.py  exploration_walls.py  map_room.py  visualize_cells.py
examples/mapping/config/: config.json  config.yaml
examples/simple_demo/: hardware_demo.py  light_demo.py  sensor_demo.py  sound_follow.py
tests/: test_actuators.py  test_architecture.py  test_conservative_exploration.py  test_coverage_exploration.py  test_dashboard.py  test_discovery.py  test_examples.py  test_interactive.py  test_mapping.py  test_motion.py  test_navigation.py  test_sensors.py  test_wall_follower.py  test_ws.py
tests/data/: course.json
